# MSP-2.0-Desktop-App

./: .gitignore  CLAUDE.md  README.md  REFERENCES.md  TAURI_SETUP.md  eslint.config.js  example-feed.xml  nip46-fix.patch  package-lock.json  package.json  playwright.config.ts  vercel.json  video-outline.md  vite.config.ts  vitest.config.ts
.github/workflows/: notify-desktop.yml  release.yml  sync-upstream.yml  test.yml
api/: example-feed.ts  op3check.ts  pisearch.ts  pisubmit.ts  podping.test.ts  podping.ts  proxy-feed.test.ts  proxy-feed.ts  pubnotify.test.ts  pubnotify.ts
api/_utils/: accountStore.test.ts  accountStore.ts  adminAuth.ts  cors.test.ts  cors.ts  emailAuth.test.ts  emailAuth.ts  feedHydrate.ts  feedUtils.test.ts  feedUtils.ts  podcastIndex.ts  rateLimiter.test.ts  rateLimiter.ts  sendEmail.test.ts  sendEmail.ts  urlSafety.test.ts  urlSafety.ts  urlValidation.test.ts  urlValidation.ts  xmlUtils.test.ts  xmlUtils.ts
api/account/: feeds.test.ts  feeds.ts
api/admin/: challenge.ts  verify.ts
api/auth/: magic-link.test.ts  magic-link.ts  verify.test.ts  verify.ts
api/hosted/: [feedId].ts  feedId-email-auth.test.ts  index.ts
docs/: dns-musicsideproject-backup-2026-06-17.txt  nostr-music-nip-research.md  rss-nostr-music-crossref.md
e2e/: mobile-interactions.spec.ts  responsive.spec.ts
public/: info.md
src/: App.css  App.tsx  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AddRecipientSelect.tsx  ArtworkFields.tsx  BlossomManager.tsx  DesktopNostrLogin.tsx  FeedSidebar.tsx  FundingFields.tsx  InfoIcon.test.tsx  InfoIcon.tsx  LocalFeedsManager.tsx  NostrSyncModal.tsx  PodcastImagesList.tsx  PodcastIndexIcon.tsx  RecipientsList.tsx  Section.test.tsx  Section.tsx  Toggle.test.tsx  Toggle.tsx
src/data/: fieldInfo.ts  recipients.ts
src/hooks/: useAsyncAction.ts
src/pages/: VerifyMagicLink.tsx
src/store/: experimentalStore.tsx  feedStore.test.ts  feedStore.tsx  feedStorePersistence.test.tsx  nostrStore.tsx  themeStore.tsx
src/test/: setup.ts  utils.tsx
src/types/: feed.test.ts  feed.ts  nostr.ts
(+80 files in other folders)
