[package]
name = "msp-studio"
version = "0.1.0"
description = "Music Side Project Studio - Desktop"
authors = ["ChadFarrow"]
license = "MIT"
repository = "https://github.com/ChadFarrow/MSP-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr-sdk = "0.37"
tokio = { version = "1", features = ["full"] }
directories = "5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
sha2 = "0.10"
hex = "0.4"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
machine-uid = "0.5"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
